--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,7 +6,7 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">
-     {% if site.title == blank %}{{ site.title }}{% else %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}  {{ site.last_name }}{% endif %}
+     {% if site.title == blank %}{{ site.title }}{% else %}<span class="font-weight-bold">{{ site.first_name }} {{ site.middle_name }}  {{ site.last_name }} </span> {{ site.chinese_name }} {% endif %}
     </h1>
      <p class="desc">{{ page.description }}</p>
   </header>
@@ -35,6 +35,10 @@ layout: default
 
     {% if page.selected_papers %}
       {% include selected_papers.html %}
+    {% endif %}
+
+    {% if page.awards %}
+      {% include awards.html %}
     {% endif %}
 
     {% if page.social %}
